--- a/src/ui/scss/component/_dat-gui.scss
+++ b/src/ui/scss/component/_dat-gui.scss
@@ -65,7 +65,7 @@
       .cr {
         &.function:hover,
         &.boolean:hover {
-          background-color: $lbry-white;
+          background-color: black; //white;
         }
       }
 
