--- a/src/ui/scss/component/_spinner.scss
+++ b/src/ui/scss/component/_spinner.scss
@@ -57,6 +57,6 @@
   margin-top: var(--spacing-large);
 
   .rect {
-    background-color: $lbry-white;
+    background-color: black; //white;
   }
 }
