--- a/src/ui/scss/component/_syntax-highlighter.scss
+++ b/src/ui/scss/component/_syntax-highlighter.scss
@@ -42,7 +42,7 @@
 
     // addon: selection/active-line.js
     .CodeMirror-activeline-background {
-      background-color: rgba(153, 187, 255, 0.04);
+      background-color: black; //153, 187, 255, 0.04);
     }
 
     // basic syntax
