--- a/src/ui/scss/themes/light.scss
+++ b/src/ui/scss/themes/light.scss
@@ -1,11 +1,9 @@
 [theme='light'] {
-  --color-primary: var(--lbry-teal-4);
+  // --color-primary: var(--lbry-teal-4);
   // --color-primary-dark: #008769;
-  --color-primary-dark: #007e5d;
-  --color-primary-light: #e3f6f1;
+  // --color-primary-dark: #007e5d;
+  // --color-primary-light: #e3f6f1;
   --color-primary-variant: #e8ecff;
-  --color-secondary: var(--lbry-indigo-4);
-  --color-secondary-alt: var(--lbry-indigo-1);
   --color-secondary-2: #a9a3aa;
   --color-secondary-3: #acbcfd;
   --color-secondary-light: #f8f9ff;
