--- a/src/ui/scss/component/_claim-list.scss
+++ b/src/ui/scss/component/_claim-list.scss
@@ -106,7 +106,7 @@
 .claim-preview--visited {
   // Still keep the normal styles on hover regardless of if they have visited the claim
   &:not(:hover) {
-    color: lighten($lbry-black, 35%);
+    // color: lighten(black; //black, 35%);
   }
 }
 
@@ -115,7 +115,7 @@
   opacity: 0.6;
 
   &:hover {
-    background-color: $lbry-white;
+    background-color: black; //white;
   }
 }
 
@@ -190,6 +190,6 @@
 }
 
 .claim-upload__progress--inner {
-  background: $lbry-teal-1;
+  background: black; //teal-1;
   padding: var(--spacing-miniscule);
 }
