--- a/src/ui/scss/component/_file-render.scss
+++ b/src/ui/scss/component/_file-render.scss
@@ -68,8 +68,8 @@
   }
 
   .CodeMirror-gutters {
-    background-color: $lbry-gray-1;
-    border-right: 1px solid $lbry-gray-2;
+    background-color: black; //gray-1;
+    border-right: 1px solid black; //gray-2;
     padding-right: var(--spacing-medium);
   }
 
@@ -78,7 +78,7 @@
   }
 
   .CodeMirror-linenumber {
-    color: $lbry-gray-5;
+    color: black; //gray-5;
   }
 }
 
