--- a/src/ui/scss/component/_notice.scss
+++ b/src/ui/scss/component/_notice.scss
@@ -2,17 +2,17 @@
   border: 1px solid;
   border-radius: 5px;
   padding: var(--spacing-medium) var(--spacing-large);
-  text-shadow: 0 1px 0 rgba($lbry-white, 0.5);
+  text-shadow: 0 1px 0 black; //black; //white, 0.5);
 
   &:not(.notice--error) {
-    background-color: $lbry-green-1;
-    border-color: $lbry-green-2;
-    color: $lbry-green-3;
+    background-color: black; //green-1;
+    border-color: black; //green-2;
+    color: black; //green-3;
   }
 }
 
 .notice--error {
-  background-color: $lbry-red-1;
-  border-color: $lbry-red-2;
-  color: $lbry-red-3;
+  background-color: black; //red-1;
+  border-color: black; //red-2;
+  color: black; //red-3;
 }
