--- a/src/ui/scss/component/_pagination.scss
+++ b/src/ui/scss/component/_pagination.scss
@@ -16,11 +16,11 @@
   text-align: center;
 
   &:not(.pagination__item--selected):hover {
-    color: $lbry-black;
+    color: black; //black;
   }
 
   &:not(.pagination__item--selected):not(.pagination__item--break):not(.disabled):hover {
-    background-color: $lbry-gray-1;
+    background-color: black; //gray-1;
   }
 
   &:not(.pagination__item--previous):not(.pagination__item--next) {
@@ -52,6 +52,6 @@
 }
 
 .pagination__item--selected {
-  background-color: $lbry-teal-5;
-  color: $lbry-white;
+  background-color: black; //teal-5;
+  color: black; //white;
 }
