--- a/src/ui/scss/component/_search.scss
+++ b/src/ui/scss/component/_search.scss
@@ -2,7 +2,7 @@
   margin-bottom: var(--spacing-large);
 
   .placeholder {
-    background-color: rgba($lbry-white, 0.1);
+    background-color: black; //black; //white, 0.1);
   }
 }
 
@@ -11,15 +11,15 @@
 
   legend {
     &.search__legend--1 {
-      background-color: $lbry-teal-4;
+      background-color: black; //teal-4;
     }
 
     &.search__legend--2 {
-      background-color: $lbry-cyan-4;
+      background-color: black; //cyan-4;
     }
 
     &.search__legend--3 {
-      background-color: $lbry-pink-4;
+      background-color: black; //pink-4;
     }
   }
 
