--- a/src/ui/scss/component/_tags.scss
+++ b/src/ui/scss/component/_tags.scss
@@ -1,5 +1,3 @@
-$main: $lbry-teal-5;
-
 .tags {
   @extend .ul--no-style;
   display: flex;
@@ -48,28 +46,12 @@ $main: $lbry-teal-5;
 .tag {
   @extend .badge;
   @extend .badge--tag;
-  user-select: none;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  text-transform: lowercase;
-  max-width: 10rem;
-  min-width: 0;
-
-  &:hover {
-    background-color: $lbry-teal-4;
-    color: $lbry-white;
-    svg {
-      stroke: $lbry-white;
-    }
-  }
-
-  &:active {
-    background-color: $main;
-  }
+  // overflow: hidden;
+  // text-overflow: ellipsis;
+  // white-space: nowrap;
+  // text-transform: lowercase;
+  // max-width: 10rem;
+  // min-width: 0;
 }
 
 .tag--remove {
@@ -78,5 +60,5 @@ $main: $lbry-teal-5;
 }
 
 .tag--mature {
-  @extend .badge--mature;
+  @extend .badge--tag-mature;
 }
