--- a/src/ui/scss/component/_wunderbar.scss
+++ b/src/ui/scss/component/_wunderbar.scss
@@ -27,7 +27,7 @@
   @extend .wunderbar;
   flex: 0;
   margin-right: 0;
-  color: $lbry-black;
+  color: black; //black;
 
   fieldset-section {
     width: 15rem;
