--- a/src/ui/scss/init/_reset.scss
+++ b/src/ui/scss/init/_reset.scss
@@ -77,7 +77,7 @@ dl {
 }
 
 textarea {
-  border: 1px solid $lbry-gray-2;
+  border: 1px solid black; //gray-2;
   padding: $spacing-vertical * 1/3;
   width: 100%;
 }
@@ -111,7 +111,7 @@ input {
   }
 
   &:not([type='file']):not(:disabled):not(.wunderbar__input):not(.input-copyable) {
-    border-bottom: var(--input-border-size) dotted $lbry-gray-5;
+    border-bottom: var(--input-border-size) dotted black; //gray-5;
   }
 
   &[type='checkbox']:not(:disabled),
@@ -126,8 +126,8 @@ input {
   }
 
   &:disabled {
-    border-bottom: var(--input-border-size) solid $lbry-gray-3;
-    color: $lbry-gray-3;
+    border-bottom: var(--input-border-size) solid black; //gray-3;
+    color: black; //gray-3;
     cursor: default;
   }
 
