--- a/src/ui/scss/themes/light.scss
+++ b/src/ui/scss/themes/light.scss
@@ -1,21 +1,23 @@
 [theme='light'] {
-  // --color-primary: var(--lbry-teal-4);
-  // --color-primary-dark: #008769;
-  // --color-primary-dark: #007e5d;
-  // --color-primary-light: #e3f6f1;
-  --color-primary-variant: #e8ecff;
-  --color-secondary-2: #a9a3aa;
-  --color-secondary-3: #acbcfd;
-  --color-secondary-light: #f8f9ff;
-  --color-secondary-dark: #272e49;
+  // // --color-primary: var(--lbry-teal-4);
+  // // --color-primary-dark: #008769;
+  // // --color-primary-dark: #007e5d;
+  // // --color-primary-light: #e3f6f1;
+  // --color-primary-variant: #e8ecff;
+  // --color-secondary-2: #a9a3aa;
+  // --color-secondary-3: #acbcfd;
+  // --color-secondary-light: #f8f9ff;
+  // --color-secondary-dark: #272e49;
+
+  --color-link-icon: var(--color-gray-5);
+  --color-link-active: var(--color-primary);
 
   // Color
   --color-background: #f7f7f7;
   --color-border: #ededed;
   --color-background-overlay: #21252980;
 
-  --color-text: #111111;
-  --color-text-error: var(--lbry-red-1);
+  --color-text-error: var(--color-danger);
   --color-text-empty: #bbbbbb;
   --color-text-help: #767676;
   --color-text-subtitle: #767676;
@@ -40,25 +42,10 @@
 
   /* Input */
 
-  /* Button */
-  --color-button-background: var(--color-primary);
-  --color-button-background-hover: var(--lbry-teal-3);
-  --color-link: var(--color-primary-dark);
-  --color-link-hover: var(--color-primary);
-  --color-link-active: var(--color-primary);
-  --color-link-icon: var(--lbry-gray-4);
-
   /* Menu */
   --color-menu-background: #434b53;
   --color-menu-background--selected: #2c3237;
   --color-menu-background--active: #4e5862;
-
-  /* Tags */
-  --color-tag-background: var(--color-primary-light);
-  --color-tag: var(--color-primary-dark);
-  --tag-mature-background: #b394c6db;
-  --color-tag-action: var(--color-primary-dark);
-  --color-tag-border: transparent;
 
   /* Content */
   --color-file-viewer-background: #212529;
